objects/TW1_IDS_Direitos__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Direito_AF_Comercial__c</fullName>
        <label>Direito_AF_Comercial</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Alienacao_Fiduciaria__c</fullName>
        <label>Direito_Alienacao_Fiduciaria</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Alteracao_Vencimento__c</fullName>
        <label>Direito_Alteracao_Vencimento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Antecipacao__c</fullName>
        <label>Direito_Antecipacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Assistencia_Tecnica__c</fullName>
        <label>Direito_Assistencia_Tecnica</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Atualizacao_Cadastral__c</fullName>
        <label>Direito_Atualizacao_Cadastral</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Boas_Vindas__c</fullName>
        <label>Direito_Boas_Vindas</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Cessao_Direitos__c</fullName>
        <label>Direito_Cessao_Direitos</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Comunicacao_Securitizacao__c</fullName>
        <label>Direito_Comunicacao_Securitizacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Comunicacao_Sinistro__c</fullName>
        <label>Direito_Comunicacao_Sinistro</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Conferencia_Contratos_AF__c</fullName>
        <label>Direito_Conferencia_Contratos_AF</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Conferencia_Contratos_Vendas__c</fullName>
        <label>Direito_Conferencia_Contratos_Vendas</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Conferencia_Contratos__c</fullName>
        <label>Direito_Conferencia_Contratos</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Devolucao_Cheque_Ativo__c</fullName>
        <label>Direito_Devolucao_Cheque_Ativo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Devolucao_Cheque__c</fullName>
        <label>Direito_Devolucao_Cheque</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Elogio_Sugestao_Reclamacao__c</fullName>
        <label>Direito_Elogio_Sugestao_Reclamacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Email__c</fullName>
        <label>Direito_Email</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Emissao_Cert_Seguro_Prestamista__c</fullName>
        <label>Direito_Emissao_Cert._Seguro_Prestamista</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Entrega_Chaves__c</fullName>
        <label>Direito_Entrega_Chaves</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Entrega_Documentacao_Arquivada__c</fullName>
        <label>Direito_Entrega_Documentacao_Arquivada</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Entrega_Documentacao__c</fullName>
        <label>Direito_Entrega_Documentacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Envio_Boleto__c</fullName>
        <label>Direito_Envio_Boleto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Envio_Informe_Rendimentos__c</fullName>
        <label>Direito_Envio_Informe_Rendimentos</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Escritura_Definitiva_CompraVenda__c</fullName>
        <label>Direito_Escritura_Definitiva_CompraVenda</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Falecimento_Cliente__c</fullName>
        <label>Direito_Falecimento_Cliente</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Identificacao_Quitacao__c</fullName>
        <label>Direito_Identificacao_Quitacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Informacao__c</fullName>
        <label>Direito_Informacao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Leilao__c</fullName>
        <label>Direito_Leilao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Manutencao_Area_Comum__c</fullName>
        <label>Direito_Manutencao_Area_Comum</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Manutencao_Unidade__c</fullName>
        <label>Direito_Manutencao_Unidade</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Permuta__c</fullName>
        <label>Direito_Permuta</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Postergacao_Vencimento__c</fullName>
        <label>Direito_Postergacao_Vencimento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Realizar_Evolucao_Financeira__c</fullName>
        <label>Direito_Realizar_Evolucao_Financeira</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Realizar_Reintegracao_Posse__c</fullName>
        <label>Direito_Realizar_Reintegracao_Posse</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Realizar_Rescisao_Judicial__c</fullName>
        <label>Direito_Realizar_Rescisao_Judicial</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Repasse__c</fullName>
        <label>Direito_Repasse</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Rescisao_Venda_Nova_Fin__c</fullName>
        <label>Direito_Rescisão com Venda Nova Financia</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Rescisao_Venda_Nova__c</fullName>
        <label>Direito_Rescisao_Venda_Nova</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Rescisao__c</fullName>
        <label>Direito_Rescisao</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Retomada__c</fullName>
        <label>Direito_Retomada</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Solicitacao_Boleto__c</fullName>
        <label>Direito_Solicitacao_Boleto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Solicitacao_Devolucao_Valor__c</fullName>
        <label>Direito_Solicitacao_Devolucao_Valor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Solicitar_Extrato_Financeiro__c</fullName>
        <label>Direito_Solicitar_Extrato_Financeiro</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Solicitar_Informe_Rendimentos__c</fullName>
        <label>Direito_Solicitar_Informe_Rendimentos</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Solicitar_Quitacao_Condominial__c</fullName>
        <label>Direito_Solicitar_Quitacao_Condominial</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_VipLine__c</fullName>
        <label>Direito_VipLine</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Vistoria_Area_Comum__c</fullName>
        <label>Direito_Vistoria_Area_Comum</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Vistoria_Unidade_Vendida_Estoque__c</fullName>
        <label>Direito_Vistoria_Unidade_Vendida_Estoque</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito_Vistoria_Unidade__c</fullName>
        <label>Direito_Vistoria_Unidade</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direito__c</fullName>
        <label>Direito_Reapresentar_Cheque</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Direitos</label>
</CustomObject>